# noa

./: .gitignore  .gitmodules  AvailableRequests.py  CMakeLists.txt  LICENSE.md  README.md  docs.yml  env-cpu.yml  env.yml  extras.py  newDeribitAPI.py  oldDeribitAPI.py  processingData.ipynb  req.txt
HestonModel/OptionMarketScrapper/: AvailableRequests.py  CreateOptionSurface.py  DownloadOptionWithIndexPrice.py  How It Works.tex  Scrapper.py  plot_surface.ipynb
HestonModel/OptionMarketScrapper/LiveMessages/: DerBack.py  DerDUMB.py  DerNew.py  LiveDeribit.py
HestonModel/OptionMarketScrapper/LiveSaver/: ScrapperApp.py  (+2 more)
Orderbook/: configuration.yaml
Orderbook/DataBase/: MySQLDaemon.py
Orderbook/Scrappers/: DeribitClient.py
Orderbook/SyncLib/: AvailableRequests.py  CreateOptionSurface.py  DeribitConnectionOld.py  DownloadOptionWithIndexPrice.py  Scrapper.py
Orderbook/Utils/: AvailableCurrencies.py  MSG_LIST.py
apps/: CMakeLists.txt
apps/ghmc/: CMakeLists.txt  README.md  normal-cpu.cc  routines.hh
apps/pms/: CMakeLists.txt  README.md  bmc.cc  load.cc  muography.cc  pumas.cc
apps/sampler/: CMakeLists.txt  README.md  normal-cpu.cc  routines.hh
benchmark/: CMakeLists.txt  benchmark-dcs-cuda.cc  benchmark-dcs-model.cc  benchmark-dcs.cc  benchmark-pumas-model.cc  benchmark-utils.cc  dcs_kernels.cu  measure-dcs-calc-cuda.cc  measure-dcs-calc.cc  measure-dcs-calc.hh  noa-bench.hh  noa-benchmark.hh  unit-pms.hh
cmake/: NOAConfig.cmake.in  check-cuda.cmake  check-torch-cxx11-abi.py  check-torch.cmake  conda-omp.cmake  doxygen-docs.cmake  fetch-benchmark.cmake  fetch-gflags.cmake  fetch-gtest.cmake  fetch-pugixml.cmake  ghmc-data.cmake  kotik-pms-models.cmake  noa-pms-models.cmake  noa-test-data.cmake  pumas-materials.cmake
docs/: README.md
docs/cfd/: README.md  adjoint_two_phase.ipynb  cfd-adjoint.ipynb  cfd-diffprog.ipynb  diffprog_two_phase.ipynb  gcs_monitoring.ipynb
docs/ghmc/: README.md  bayesian_deep_learning.ipynb  bayesian_nets.cc  bayesian_nets.ipynb  muography.ipynb
docs/numerics/: README.md  linear_tnl_solvers.ipynb
docs/pms/: Differentiable programming for particle physics simulations.ipynb  README.md  differentiable_programming_pms.ipynb  diffpms.cc  diffpms.cu  muography.ipynb  muography_gcs.ipynb  muography_monitoring.ipynb  muon_dcs.cc  muon_dcs.cu  muon_dcs_calc.ipynb  muon_tomography.ipynb  muons.cc  muons.cu  muons.ipynb
docs/qc/: AbstractAdapter.py  Adjoint_Sensitivity_Method_for_Kohn_Sham_Equations.ipynb  DQCAdapter.py  DQC_derivatives.ipynb  DQC_tests.ipynb  DQC_vs_PySCF.ipynb  DQC_vs_finite_difference.ipynb  PySCFAdapter.py  PySCF_adapter.ipynb  PySCF_adapter_2.ipynb  README.md  adjoint_derivatives.ipynb  adjoint_derivatives_with_PySCF.ipynb  comparison.ipynb  comparison_finite_diff.ipynb  dE_wrt_dC.ipynb  dE_wrt_dTheta.ipynb  dE_wrt_dX.ipynb  dqc.ipynb  dr_wrt_dC.ipynb  dr_wrt_dTheta.ipynb
docs/quant/: Adjoint_EuPut.ipynb  BrennanSchwartzAlgorythm.ipynb  Exercises.ipynb  PricingVolSurface.ipynb  README.md  SVI.ipynb  SVI_new.ipynb  VolatilitySurfaceFunctions.py  binary_trees.ipynb  bsm.cc  bsm.ipynb  deep_hedging.ipynb  deribit_backtesting.ipynb  deribit_delta_space.ipynb  deribit_vol_surface.csv  deribit_vol_surface.py  finite_differences.ipynb  flat_vol_surface.csv  fx_hlmm.ipynb  heston.cc  heston.ipynb  heston_calibration.ipynb  heston_greeks_hedging.ipynb  heston_historical_calibration.ipynb  heston_model.ipynb  heston_sim.ipynb  interest_rates_modelling.ipynb  introduction.ipynb  levenberg_marquad_sabr.ipynb  levenberg_marquardt.ipynb  lsm.cc  lsm.ipynb  optlib.py  requirements.txt  resample_data.py  sabr.cc  sabr.ipynb  sabr_calibration.ipynb  skew_vol_surface.csv  ssbi_ds.ipynb  (+8 more)
include/ghmc/: ghmc.hh  numerics.hh  utils.hh
include/kotik/: ghmc.hh
include/noa/: ghmc.hh
jnoa/: CMakeLists.txt  jnoa.cc  jnoa.hh
jnoa/resources/: JNoa.java
kmath/: jnoa.cc  jnoa.hh  space_kscience_kmath_noa_JNoa.h
src/: CMakeLists.txt
src/noa/: LICENSE  ghmc.hh  kernels.cuh  kernels.h  kernels.hh
src/noa/pms/: dcs.cuh  dcs.hh  kernels.cuh  kernels.hh  physics.hh  pumas.hh  trace.hh
src/noa/quant/: bsm.hh  heston.hh  heston_sim.hh  lsm.hh
src/noa/quant/pytorch_extensions/: heston_sim.cc
src/noa/utils/: common.cuh  common.hh  meshes.hh  numerics.hh
src/noa/utils/domain/: configtagpermissive.hh  domain.hh  layermanager.hh
src/pms/: mdf.cc  xml.hh
test/: CMakeLists.txt  benchmark-dcs.cc  benchmark-pms.cc  dcs-kernels.cu  dcs-kernels.hh  dcs_kernels.cu  functional.cc  kernels.c  kernels.cc  kernels.cu  main.cc  pms.cc  pms.hh  routines.hh  sampler.cc  sampler.hh  test-data.hh  test-dcs-cuda.cc  test-dcs-model.cc  test-dcs.cc  test-dcs.hh  test-ghmc.cc  test-ghmc.hh  test-pms.cc  test-pumas-model.cc  test-sampler.cc  tests.hh  unit-ghmc.hh  unit-pms.hh  unit-sampler.hh
test/cfd/: CMakeLists.txt  ConfigTagPermissive.hh  Domain.hh  Func.hh  Geometry.hh  LayerManager.hh  MHFE.hh  MHFESolver.hh  Macros.hh  common.hh  main-pch.hh  main.cc  main.hh
test/cfd/mhfe/: except.hh  geometry.hh  layers.hh  methods.hh  mhfe.hh
test/cfd/mhfe/torch/: dtype.hh  mhfe_extension.cc  wrappers.hh
test/cfd/utils/: common.hh
test/ghmc/: CMakeLists.txt  ghmc-sampler.cc  routines.hh  sample-funnel.cc  sample-normal.cc  sampler.cc
test/pms/: CMakeLists.txt  domainmedium.hh  flux.c  flux.h  gflags_required.hh  load-mesh.hh  load-muon-model.cc  load-pms-model.cc  muography.cc  muon-model.cc  muons-model.cc  particleworld.hh
test/pms/util/: drawtracks.py  meshgen.py  rock_mesh.vtk
test/quant/: CMakeLists.txt  bsm.cc  heston.cc  heston_sim.cc  lsm.cc
test/quant/local_vol/: CMakeLists.txt  README.md  c-enzyme.h  configs.h  deviates.h  euler_calc.h  fwd.csv  impl_vol.csv  main.cc  nr3.h  ran.h  spline.h  vegas.csv  vol_surface.h
test/unit/: CMakeLists.txt  noa-test-suite.cc  test-data.hh  test-dcs-calc-cuda.cc  test-dcs-calc.cc  test-domain.cc  test-domain.hh  test-ghmc-sampler-cuda.cc  test-ghmc-sampler.cc  test-ghmc-sampler.hh  test-mhfem.cc  test-mhfem.hh  test-tnl.cc  test-tnl.cu  test-tnl.hh  test-trace.cc  test-trace.cu  test-trace.hh
(+343 files in other folders)
