####################################################################################################
##########################                    NOA Apps                   ###########################
####################################################################################################

if (BUILD_GHMC_APPS)
    add_subdirectory(ghmc)
endif ()


if (BUILD_PMS_APPS)
    add_subdirectory(pms)
endif ()